--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "node_modules/.bin/webpack --progress",
     "start": "node_modules/.bin/webpack-dev-server",
-    "prod": "node_modules/.bin/webpack --mode production"
+    "prod": "node_modules/.bin/webpack --mode production",
+    "lint": "eslint *.js"
   },
   "author": "Andrey Obraztsov",
   "license": "ISC",
@@ -15,6 +16,9 @@
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
